--- a/style.css
+++ b/style.css
@@ -148,14 +148,27 @@ padding: 15px;
 }
 .row{
     display: flex;
+    justify-content: space-around;
 }
 .box{
+    
     display: flex;
     flex-direction: column;
     width: 350px;
     height: 450px;
-    border:1px solid black
+    border:1px solid black;
     margin: 10px;
-    align-items:center;
+    align-items: center;
     text-align: justify;
+    padding: 10px;
+    border-radius: 15px;
+    background: linear-gradient(to top, rgb(250, 51, 51) 50%, white 50%);
+    background-size: 100% 200%;
+    transition: all .8s;
+}
+.box:hover{
+    background-position: left bottom;
+    color:white;
+    border:none;
+    box-shadow: 0 0 20px rgb(255,45, 45);
 }
